--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@capacitor/keyboard": "^5.0.8",
     "@capacitor/splash-screen": "^5.0.7",
     "@capacitor/status-bar": "^5.0.7",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
     "dom7": "^4.0.6",
     "framework7": "^8.3.2",
     "framework7-icons": "^5.0.5",
@@ -35,7 +37,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "skeleton-elements": "^4.0.1",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "typescript": "^5.4.3"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.7.4",
