--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "dom7": "^4.0.6",
+    "firebase": "^10.9.0",
     "framework7": "^8.3.2",
     "framework7-icons": "^5.0.5",
     "framework7-react": "^8.3.2",
