--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ __pycache__/
 /.vscode
 API_KEY.txt
 logs.json
+fb-admin/starthack2024-firebase-adminsdk-jupxu-5a3edb365a.json
+logs.json
+API_KEY.txt
