--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ __pycache__/
 /coverage.xml
 /report.xml
 
+
 *.sw[op]
 /.vscode
 API_KEY.txt
@@ -76,3 +77,5 @@ logs.json
 fb-admin/starthack2024-firebase-adminsdk-jupxu-5a3edb365a.json
 logs.json
 API_KEY.txt
+starthack2024-firebase-adminsdk-jupxu-2baa93ecc2.json
+spielwiese.py
