--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ API_KEY.txt
 logs.json
 fb-admin/starthack2024-firebase-adminsdk-jupxu-5a3edb365a.json
 logs.json
-API_KEY.txt
 starthack2024-firebase-adminsdk-jupxu-2baa93ecc2.json
 spielwiese.py
+python/starthack2024-firebase-adminsdk-jupxu-5a3edb365a.json
+node/starthack2024-firebase-adminsdk-jupxu-5a3edb365a.json
