move pictures to public

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ starthack2024-firebase-adminsdk-jupxu-2baa93ecc2.json
 spielwiese.py
 python/starthack2024-firebase-adminsdk-jupxu-5a3edb365a.json
 node/starthack2024-firebase-adminsdk-jupxu-5a3edb365a.json
+.firebase/hosting.d3d3.cache
